# urchin

./: .gitignore  README.md  ed.tscn  icon.svg.import  project.godot  pyproject.toml
python_conversion_scripts/: README.md  convert_battles.py  convert_items.py  convert_moves.py  convert_units.py  pyproject.toml  rename_inner_dirs.py
python_conversion_scripts/action_script_files/: sonny2_agression.txt  sonny2_expWorkOut.txt  sonny2_moves.txt
python_conversion_scripts/action_script_files/frame1/: sonny2_achievements.txt  sonny2_battle_victory.txt  sonny2_class.txt  sonny2_elements.txt  sonny2_shop_say.txt  sonny2_skills_english.txt  sonny2_static_strings_english_and_german.txt  sonny2_zones.txt
python_conversion_scripts/action_script_files/frame201_LOAD_BATTLE_SCENE/: sonny2_LOAD_BATTLE_SCENE.txt
python_conversion_scripts/action_script_files/frame217_KRIN_BATTLE_SCENE/: 1_loading_battle_properties.txt  2_dressing_chars.txt  onClipEvent_enterFrame.txt
python_conversion_scripts/action_script_files/frame41/: sonny2_setting_class_abilities_extra_globals.txt
python_conversion_scripts/action_script_files/frame42/: sonny2_addNewBuffKrin.txt  sonny2_addNewMove.txt  sonny2_ai_move_adder.txt  sonny2_createNewBattle.txt  sonny2_createNewItemKrin.txt  sonny2_createNewUnitKrin.txt  sonny2_krrr  (+4 more)
python_conversion_scripts/converted_json/: battles.json  converted_item_by_id.json  converted_moves_by_id.json  converted_units_by_id.json  items.json  moves_abilities.json  units.json
python_conversion_scripts/data_json/: swf_battles.json  swf_buffs.json  swf_items.json  swf_krin_units.json  swf_move_abilities.json  swf_units.json
(+1792 files in other folders)
